fix(docs): fix url in server
changing url to be example.com in the docs but be hosted path for the
swagger-ui endpoint

also cleaning up the code
